# Chess

./: .gitmodules  CMakeLists.txt  README.md  newClass.py  run
cmake_modules/: FindSFML.cmake
include/: Bishop.h  Board.h  BoardPosition.h  ChessGame.h  Color.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  SpecialRules.h
src/: Bishop.cpp  Board.cpp  ChessGame.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  SpecialRules.cpp  main.cpp
